--- a/index.html
+++ b/index.html
@@ -2,11 +2,36 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Dung Beetle</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Dosis:400,700" rel="stylesheet">
 </head>
 <body>
-
+  <a class="link-card" href="">
+    <header>
+      <h2>Dung Beetle</h2>
+    </header>
+    <p>Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.</p>
+    <dl>
+      <dd>Kingdom</dd>
+      <dt>Animalia</dt>
+      <dd>Phylum<dd>
+      <dt>Arthropoda</dt>
+      <dd>Class</dd>
+      <dt>Insecta</dt>
+      <dd>Order</dd>
+      <dt>Coleoptera</dt>
+      <dd>Suborder</dd>
+      <dt>Polyphaga</dt>
+      <dd>Superfamily</dd>
+      <dt>Scarabaeoidea</dt>
+      <dd>Family</dd>
+      <dt>Scarabidae</dt>
+    </dl>
+    <div>
+      <a href="https://en.wikipedia.org/wiki/Dung_beetle">Learn more…</a>
+    </div>
+  </a>
 </body>
 </html>
