Change tags used

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Dosis:400,700" rel="stylesheet">
 </head>
 <body>
-  <a class="link-card" href="">
+  <a class="link-card" href="https://en.wikipedia.org/wiki/Dung_beetle">
     <header>
       <h2>Dung Beetle</h2>
     </header>
@@ -30,7 +30,7 @@
       <dt>Scarabidae</dt>
     </dl>
     <div>
-      <a href="https://en.wikipedia.org/wiki/Dung_beetle">Learn more…</a>
+      <span class="btn">Learn more…</span>
     </div>
   </a>
 </body>
