Fix code in list

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <dl>
       <dd>Kingdom</dd>
       <dt>Animalia</dt>
-      <dd>Phylum<dd>
+      <dd>Phylum</dd>
       <dt>Arthropoda</dt>
       <dd>Class</dd>
       <dt>Insecta</dt>
