--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
     </header>
     <p>Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.</p>
     <dl>
-      <dd>Kingdom</dd>
-      <dt>Animalia</dt>
-      <dd>Phylum</dd>
-      <dt>Arthropoda</dt>
-      <dd>Class</dd>
-      <dt>Insecta</dt>
-      <dd>Order</dd>
-      <dt>Coleoptera</dt>
-      <dd>Suborder</dd>
-      <dt>Polyphaga</dt>
-      <dd>Superfamily</dd>
-      <dt>Scarabaeoidea</dt>
-      <dd>Family</dd>
-      <dt>Scarabidae</dt>
+      <dt>Kingdom</dt>
+      <dd>Animalia</dd>
+      <dt>Phylum</dt>
+      <dd>Arthropoda</dd>
+      <dt>Class</dt>
+      <dd>Insecta</dd>
+      <dt>Order</dt>
+      <dd>Coleoptera</dd>
+      <dt>Suborder</dt>
+      <dd>Polyphaga</dd>
+      <dt>Superfamily</dt>
+      <dd>Scarabaeoidea</dd>
+      <dt>Family</dt>
+      <dd>Scarabidae</dd>
     </dl>
     <div>
       <span class="btn">Learn more…</span>
